# sonarlog_annotation

./: .gitignore  CMakeLists.txt  manifest.xml
src/: AnnotationFileReader.cpp  AnnotationFileReader.hpp  AnnotationWindow.cpp  AnnotationWindow.hpp  main.cpp
